--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -259,6 +259,14 @@ body {
 .calculate_section .parent .card_parent .calculate_card .investing_amount_box .returns_percent {
   padding-top: 6px;
 }
+.calculate_section .parent .card_parent .calculate_card .investing_amount_box .investing_percentage {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.calculate_section .parent .card_parent .calculate_card .investing_amount_box .investing_percentage .slider_img {
+  width: 80%;
+}
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider {
   margin-top: 34px;
 }
@@ -1085,26 +1093,19 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 0 10px;
   gap: 20px;
 }
 .cards_section .card_container .card_item {
-  min-height: 120px;
-  max-width: -moz-fit-content;
-  max-width: fit-content;
+  min-width: 300px;
+  padding: 20px;
   border-radius: 16px;
   box-shadow: 0px 0px 24px 2px rgba(0, 0, 0, 0.0588235294);
-}
-.cards_section .card_container .card_item .item_container {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
   align-items: center;
-  gap: 70px;
-  min-width: 320px;
-  padding: 24px 26px;
 }
-.cards_section .card_container .card_item .item_container .card_title {
+.cards_section .card_container .card_item .card_title {
   font-size: 32px;
   line-height: 40px;
   color: #445361;
@@ -1112,7 +1113,7 @@ body {
   margin: 0px;
   font-family: "Montserrat_bold";
 }
-.cards_section .card_container .card_item .item_container .card_subtitle {
+.cards_section .card_container .card_item .card_subtitle {
   font-weight: 500;
   font-size: 18px;
   line-height: 20px;
@@ -1125,6 +1126,9 @@ body {
 @media only screen and (max-width: 390px) {
   .cards_section {
     padding: 20px;
+  }
+  .cards_section .card_container .card_item {
+    min-width: 265px;
   }
   .cards_section .card_container .card_item .item_container {
     min-width: 250px;
