--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -1088,7 +1088,6 @@ body {
 
 .cards_section {
   margin-top: 16px;
-  margin-bottom: 24px;
 }
 .cards_section .card_container {
   display: flex;
@@ -1097,7 +1096,7 @@ body {
   gap: 20px;
 }
 .cards_section .card_container .card_item {
-  min-width: 300px;
+  width: 20%;
   padding: 20px;
   border-radius: 16px;
   box-shadow: 0px 0px 24px 2px rgba(0, 0, 0, 0.0588235294);
