--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -1219,7 +1219,6 @@ body {
 
 .cards_section {
   margin-top: 16px;
-  margin-bottom: 24px;
 
   .card_container {
     display: flex;
@@ -1227,7 +1226,7 @@ body {
     flex-wrap: wrap;
     gap: 20px;
     .card_item {
-      min-width: 300px;
+      width: 20%;
       padding: 20px;
       border-radius: 16px;
       box-shadow: 0px 0px 24px 2px #0000000f;
